2008-09-01  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/eig.cc (Feigs): Correct nesting error in option
	parsing that prevented the use of a function for generalized
	eigenvalue problems.

2009-08-30  Jaroslav Hajek  <highegg@gmail.com>

	* ops.h (DEFCMPLXCMPOP_OP, DEFNDCMPLXCMPOP_FN): New macros.
	* gripes.cc (gripe_warn_complex_cmp): New function.
	* gripes.h: declare it.

	* OPERATORS/op-cm-cm.cc: Call the new macros.
	* OPERATORS/op-cm-cs.cc: Ditto.
	* OPERATORS/op-cm-m.cc: Ditto.
	* OPERATORS/op-cm-s.cc: Ditto.
	* OPERATORS/op-cs-cm.cc: Ditto.
	* OPERATORS/op-cs-cs.cc: Ditto.
	* OPERATORS/op-cs-m.cc: Ditto.
	* OPERATORS/op-fcm-fcm.cc: Ditto.
	* OPERATORS/op-fcm-fcs.cc: Ditto.
	* OPERATORS/op-fcm-fm.cc: Ditto.
	* OPERATORS/op-fcm-fs.cc: Ditto.
	* OPERATORS/op-fcs-fcm.cc: Ditto.
	* OPERATORS/op-fcs-fcs.cc: Ditto.
	* OPERATORS/op-fcs-fm.cc: Ditto.
	* OPERATORS/op-fm-fcm.cc: Ditto.
	* OPERATORS/op-fm-fcs.cc: Ditto.
	* OPERATORS/op-fs-fcm.cc: Ditto.
	* OPERATORS/op-m-cm.cc: Ditto.
	* OPERATORS/op-m-cs.cc: Ditto.
	* OPERATORS/op-s-cm.cc: Ditto.


2009-08-30  Jaroslav Hajek  <highegg@gmail.com>

	* ops.h (BOOL_OP1, BOOL_OP2, BOOL_OP3, SC_MX_BOOL_OP, MX_SC_BOOL_OP,
	MX_MX_BOOL_OP): Remove.

2009-08-28  John W. Eaton  <jwe@octave.org>

	* genprops.awk: Generate static member functions has_core_property
	and core_property_names.  Make has_property and all_property_names
	non-static const member functions.  Pass object type to
	validate_property_name.
	* graphics.cc (validate_property_name): New arg, WHAT.
	Improve warning and error messages.
	(property_list::set): Use has_core_property instead of has_property.
	(base_properties::has_property): Delete definition.
	(base_graphics_object::remove_all_listeners): Move unwind protect
	block here, from old base_properties::has_property function.
	* graphics.h.in (base_properties::has_property): Now virtual.
	Unconditionally call panic_impossible.

2009-08-28  John W. Eaton  <jwe@octave.org>
